@@ -1479,12 +1479,13 @@ in to the mud.
 
 MOTD=\
 Command : MOTD\n\r\
-Usage   : MOTD (ON/OFF/AGAIN)\n\r\
+Usage   : MOTD (ON/OFF/PREVIOUS/AGAIN)\n\r\
 Example : motd\n\r\
 Short(s): \n\r\
 Allows the player to review the news and daily messages.  Using \
 ON and OFF, you can also set whether or not you see the message of the day when you log \
-in to the mud.
+in to the mud.  Using AGAIN will re-show the current new daily message, \
+while PREVIOUS will show all the old daily messages.
 	
 MOUNT=\
 Command : MOUNT\n\r\
