@@ -2162,10 +2162,11 @@ Usage    : CAST "STORE SPELL" [SPELL NAME] [ITEM]\n\r\
 Example  : cast "store spell" "resist fire" hat\n\r\
 This spell allows the caster to store a known spell into an item.  The spell \
 may then be cast simply by holding (or wielding or wearing) the item, and \
-speaking the name of the item to a target.  This is similar to a wand, but \
+speaking the name of the item to a target, or to the item itself using SAYTO.  \
+This is similar to a wand, but \
 the item is only enchanted, not an actual wand.  For this reason, it cannot \
 be recharged as normal, but IS capable of storing the same spell multiple \
-times using Store Spell.
+times using Store Spell.  
 
 SPELL_SPELL_TURNING=<ABILITY>\
 Usage    : CAST "SPELL TURNING"\n\r\
