@@ -54,6 +54,7 @@
   14. Prop_ReqCapacity now has a new argument to interact with Prop_LotForSale, and special circumstances for it.
   15. New property building skills: Landscaping, Excavation, and Unknown/Unfinished skills: Welding, Irrigation
   16. Lots of bugs fixed.
+  17. MOTD command can now be used to review previous/old news
 # Build 5.9.0 Released 12/20/2015
    1. Web Server upgraded to 2.3
    2. coffeemud.ini entry FLEE has new (blank) option to basically disable fleeing and break a bunch of skills.
